Add sidenav and top nav

--- a/static/global.css
+++ b/static/global.css
@@ -18,3 +18,10 @@
 ::-webkit-scrollbar {
   display: none;
 }
+
+h1, h2, h3, h4, h5, h6, p, a {
+  font-family: 'Quicksand', 'Source Sans Pro', -apple-system, BlinkMacSystemFont,
+    'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
+  font-weight: 300;
+  color: #526488;
+}
