--- a/static/global.css
+++ b/static/global.css
@@ -22,49 +22,24 @@ h1, h2, h3, h4, h5, h6, p, a {
   color: #526488;
 }
 
-::-webkit-scrollbar {
-  /* display: none; */
+::-webkit-scrollbar-track
+{
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+  box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	background-color: #F5F5F5;
 }
 
-/* width */
-::-webkit-scrollbar {
-  width: 7px;
+::-webkit-scrollbar
+{
+	width: 6px;
+	background-color: #F5F5F5;
 }
 
-/* button */
-::-webkit-scrollbar-button {
-  background: #222;
+::-webkit-scrollbar-thumb
+{
+	background-color: #000000;
 }
 
-/* Handle */
-::-webkit-scrollbar-thumb {
-  background: #333;
-}
-
-/* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
-  background: #666;
-}
-
-/* Track */
-::-webkit-scrollbar-track {
-  background: #000;
-}
-
-/* The track NOT covered by the handle.
-::-webkit-scrollbar-track-piece {
-  background: #000;
-}
-
-/* Corner */
-::-webkit-scrollbar-corner {
-  background: #999;
-}
-
-/* Resizer */
-::-webkit-resizer {
-  background: #111;
-}
 
 /* toggle style */
 .form-switch {
