--- a/static/global.css
+++ b/static/global.css
@@ -22,6 +22,10 @@ h1, h2, h3, h4, h5, h6, p, a {
   color: #526488;
 }
 
+:root {
+  scroll-behavior: smooth;
+}
+
 ::-webkit-scrollbar-track
 {
   -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
